---------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: ????
  Changes:
    - Added productivity to Copper Tungsten & Tungsten Carbide Plates
    - Updated Tungsten Carbide Smelting 3 to produce less Hydrogen Gas
  Bugfixes:
    - Fixed molten copper tungsten locale
    - Fixed tungsten powder number tiers
---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 2026-01-10
  Features:
    - Added migrations for prototype name changes 
  Changes:
    - Switched over to using Angel's Zinc Powder
  Bugfixes:
    - Fixed crash when loading old saves
    - Fixed incorrect technology name for Mad Clown's
    - Fixed ingredients not being added by bob's add recipe
    - Fixed copper tungsten smelting's technology icon having the wrong size
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 2026-01-10
  Features:
    - Updated for 2.0
  Changes:
    - Fixed some incorrect recipes
    - Fixed some missing locale names
---------------------------------------------------------------------------------------------------
Version: 0.5.11
Date: 2024-08-31
  Locale:
    - Updated Ukrainian, German and French localizations
---------------------------------------------------------------------------------------------------
Version: 0.5.10
Date: 2023-12-23
  Changes:
    - Renamed Sodium Processing 2 to Sodium Processing 3 as Angel's has added a Sodium Processing 2 tech
    - Tidied up prerequisites and required science packs
    - The following buildings now take Tungsten carbide plate instead of Copper tungsten plate to match the other T6 Angel's buildings:
      - Advanced gas refinery 4
      - Biter refugium 3
      - Leaching plant 4
      - Ore refinery 3
    - Adjusted the ingredient tiers for the following structures to eliminate a tier gap:
      - Algae farm 5